a1/brendan_gordon/TEST_PROGRAMS/invalidtype/remi_bernard/unkn.min
# unknown variable
var s: int;
s = s + (S - s / 2);

